--- a/public/cars.html
+++ b/public/cars.html
@@ -47,11 +47,10 @@
   </div>
   <div class="search d-flex w-100 position-absolute translate-middle-y justify-content-center">
     <div class="form-search">
-      <form action="" class="d-flex gap-3">
+      <form id="filter-form" action="submit" class="d-flex gap-3">
         <div class="search-input d-flex flex-column">
-          <label for="exampleInputEmail1" class="form-label fw-light">Tipe Driver</label>
-          <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"> -->
-          <select type="email" class="form-control fw-light search-select" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <label for="driver" class="form-label fw-light">Tipe Driver</label>
+          <select id="driver" type="date" class="form-control fw-light search-select">
             <option class="search-select fw-light" selected disabled hidden>Pilih Tipe Driver</option>
             <option class="search-select fw-light" value="">Dengan Supir</option>
             <option class="search-select fw-light" value="">Tanpa Supir (Lepas Kunci)</option>
@@ -59,25 +58,25 @@
         </div>
         <div class="search-input d-flex flex-column">
           <label for="date" class="form-label fw-light">Tanggal</label>
-          <input type="email" class="form-control search-select fw-light" name="datepicker" id="date" aria-describedby="emailHelp">
+          <input id="date" type="text" class="form-control search-select fw-light" name="datepicker">
         </div>
         <div class="search-input d-flex flex-column">
-          <label for="exampleInputEmail1" class="form-label fw-light">Waktu Jemput/Ambil</label>
-          <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"> -->
-          <select type="email" class="form-control fw-light search-select" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <option class="search-select fw-light" selected disabled hidden>Pilih Tipe Driver</option>
-            <option class="search-select fw-light" value="">Dengan Supir</option>
-            <option class="search-select fw-light" value="">Tanpa Supir (Lepas Kunci)</option>
-            <option class="search-select fw-light" value="">Tanpa Supir (Lepas Kunci)</option>
-            <option class="search-select fw-light" value="">Tanpa Supir (Lepas Kunci)</option>
+          <label for="dateAvailable" class="form-label fw-light">Waktu Jemput/Ambil</label>
+          <select id="dateAvailable" type="text" class="form-control fw-light search-select">
+            <option class="search-select fw-light" selected disabled hidden>Pilih Waktu</option>
+            <option class="search-select fw-light" value="">08.00</option>
+            <option class="search-select fw-light" value="">09.00</option>
+            <option class="search-select fw-light" value="">10.00</option>
+            <option class="search-select fw-light" value="">11.00</option>
+            <option class="search-select fw-light" value="">12.00</option>
           </select>
         </div>
         <div class="search-input d-flex flex-column">
-          <label for="exampleInputEmail1" class="form-label fw-light">Jumlah Penumpang (optional)</label>
-          <input type="email" class="form-control search-select fw-light" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <label for="capacity" class="form-label fw-light">Jumlah Penumpang (optional)</label>
+          <input id="capacity" type="text" class="form-control search-select fw-light">
         </div>
         <div class="d-flex flex-column justify-content-end">
-          <button type="button" class="btn btn--primary search-select fw-light" id="search-btn">Cari Mobil</button>
+          <button type="submit" class="btn btn--primary search-select fw-light" id="search-btn">Cari Mobil</button>
         </div>
       </form>
     </div>
